<resources>
    <string name="app_name">Leitor Boleto</string>
    <string name="btn_linhadigitavel_hint">Informe a linha digitável do boleto</string>
    <string name="lbl_tipoboleto">Tipo:</string>
    <string name="lbl_linhadigitavel">Linha Digitável:</string>
    <string name="lbl_codigobarras">Código de Barras:</string>
    <string name="lbl_datavencimento">Data de Vencimento:</string>
    <string name="lbl_valor">Valor:</string>
    <string name="txt_pagamento">Pagamento de Concessionária</string>
    <string name="txt_titulo">Título Bancário</string>
    <string name="txt_indisponivel">Indisponível</string>
    <string name="msg_permissao_camera">Precisamos do acesso à câmera para ler o código de barras. Toque para tentar novamente.</string>
    <string name="msg_armazenamento_baixo">Espaço suficiente para usar essa aplicação</string>
</resources>
